<resources>
    <string name="app_name">MakeMent</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">e-mail address</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sing in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logo">MakeMent</string>
    <string name="subheading">e-mail address</string>
    <string name="start">Start</string>
    <string name="finish">Finish</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MakeMent</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="timer_activity">Tasks</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_exit">Exit</string>
    <string name="policy"><h1>Политика конфиденциальности</h1> <br></br>
Makement создал приложение Makement как бесплатное приложение. Эта УСЛУГА предоставляется компанией Makement бесплатно и предназначена для использования как есть.
Эта страница используется для информирования посетителей о нашей политике сбора, использования и раскрытия Личной информации, если кто-либо решил воспользоваться нашим Сервисом.
Если вы решите воспользоваться нашим Сервисом, вы соглашаетесь на сбор и использование информации в соответствии с настоящей политикой. Личная информация, которую мы собираем, используется для предоставления и улучшения Сервиса. Мы не будем использовать или передавать вашу информацию кому-либо, за исключением случаев, описанных в настоящей Политике конфиденциальности.
Термины, используемые в настоящей Политике конфиденциальности, имеют те же значения, что и в наших Правилах и Условиях, которые доступны при создании, если иное не определено в настоящей Политике конфиденциальности.
Сбор и использование информации
Для лучшего опыта при использовании нашего Сервиса мы можем потребовать, чтобы вы предоставили нам определенную личную информацию, включая, но не ограничиваясь использованием приложений, геолокацию. Информация, которую мы запрашиваем, будет сохранена нами и использована в соответствии с настоящей политикой конфиденциальности.
Приложение действительно использует сторонние сервисы, которые могут собирать информацию, используемую для вашей идентификации.
Ссылка на политику конфиденциальности сторонних поставщиков услуг, используемых приложением
Сервисы Google Play
Данные журнала
Мы хотим сообщить вам, что всякий раз, когда вы используете наш Сервис, в случае ошибки в приложении мы собираем данные и информацию (через сторонние продукты) на вашем телефоне под названием Данные журнала. Эти данные журнала могут включать такую информацию, как адрес Интернет-протокола вашего устройства (“IP”), имя устройства, версия операционной системы, конфигурация приложения при использовании нашего Сервиса, время и дата использования вами Сервиса и другие статистические данные.
Файлы cookie
Файлы cookie - это файлы с небольшим объемом данных, которые обычно используются в качестве анонимных уникальных идентификаторов. Они отправляются в ваш браузер с веб-сайтов, которые вы посещаете, и хранятся во внутренней памяти вашего устройства.
Эта Служба не использует эти “файлы cookie” явно. Однако приложение может использовать сторонний код и библиотеки, которые используют “файлы cookie” для сбора информации и улучшения своих услуг. У вас есть возможность либо принять, либо отказаться от этих файлов cookie и узнать, когда файл cookie отправляется на ваше устройство. Если вы решите отказаться от наших файлов cookie, вы, возможно, не сможете использовать некоторые части этой услуги.
Поставщики услуг
Мы можем нанимать сторонние компании и частных лиц по следующим причинам:
Чтобы облегчить наше обслуживание;
Предоставлять Услуги от нашего имени;
Для выполнения услуг, связанных с Обслуживанием; или
Чтобы помочь нам в анализе того, как используется наш Сервис.
Мы хотим сообщить пользователям этой Услуги, что эти третьи лица имеют доступ к их Личной информации. Причина в том, чтобы выполнять поставленные перед ними задачи от нашего имени. Однако они обязаны не раскрывать и не использовать эту информацию в каких-либо других целях.
Безопасность
Мы ценим ваше доверие к предоставлению нам вашей Личной информации, поэтому мы стремимся использовать коммерчески приемлемые средства ее защиты. Но помните, что ни один метод передачи через Интернет или метод электронного хранения не является на 100% безопасным и надежным, и мы не можем гарантировать его абсолютную безопасность.
Ссылки на Другие сайты
Этот Сервис может содержать ссылки на другие сайты. Если вы нажмете на стороннюю ссылку, вы будете перенаправлены на этот сайт. Обратите внимание, что эти внешние сайты не управляются нами. Поэтому мы настоятельно рекомендуем вам ознакомиться с Политикой конфиденциальности этих веб-сайтов. Мы не контролируем и не несем никакой ответственности за содержание, политику конфиденциальности или практику любых сторонних сайтов или сервисов.
Конфиденциальность детей
Эти Услуги не предназначены для лиц младше 13 лет. Мы сознательно не собираем личную информацию от детей в возрасте до 13 лет. В случае, если мы обнаружим, что ребенок в возрасте до 13 лет предоставил нам личную информацию, мы немедленно удалим ее с наших серверов. Если вы являетесь родителем или опекуном и вам известно, что ваш ребенок предоставил нам личную информацию, пожалуйста, свяжитесь с нами, чтобы мы могли выполнить необходимые действия.
Изменения в Настоящей Политике конфиденциальности
Мы можем время от времени обновлять нашу Политику конфиденциальности. Таким образом, вам рекомендуется периодически просматривать эту страницу на предмет любых изменений. Мы уведомим вас о любых изменениях, разместив новую Политику конфиденциальности на этой странице.
Эта политика вступает в силу с 2021-05-20 годов
Связаться с нами
Если у вас есть какие-либо вопросы или предложения по поводу нашей Политики конфиденциальности, не стесняйтесь обращаться к нам по адресу makement.org@gmail.com.</string>
</resources>